--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "svelte": "^3.49.0",
     "vite": "^3.0.7"
+  },
+  "dependencies": {
+    "svelte-navigator": "^3.2.2"
   }
 }
